# TreasuryDirect

./: .gitignore  LICENSE  README.md  api.py  pyproject.toml  reverse_engineer.py
markdown/: 21baf7ae-049e-4622-a096-b8df2494b715.md  45abf566-6e47-478d-b0d7-22a6ba48336f.md  4dbe824f-73c0-4ed6-8c21-3ae3e537f5bb.md  55444498-1add-441f-ae96-1c211ee36ecd.md  61fa8cf9-02b6-46ac-b2c9-f26442d1b761.md  INFO.md  aef9da3d-32b2-4966-969c-d33f5b66f65a.md  d8ecfbd4-b8c0-4ba5-96c2-f8153cefb56a.md  fbaa14d0-e028-48c6-bfa3-5baa5e8d7aa8.md
